Finished without  test

--- a/views/index.html
+++ b/views/index.html
@@ -922,5 +922,6 @@
       </div>
     </div>
   </body>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script type="module" src="../public/sudoku-solver.js"></script>
 </html>
